--- a/index.html
+++ b/index.html
@@ -3,52 +3,33 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Giao Diện Giống Vioedu</title>
-    <link rel="stylesheet" href="styles.css">
+    <title>Chân Trang</title>
+    <!-- Liên kết phông chữ Lobster từ Google Fonts -->
+    <link href="https://fonts.googleapis.com/css2?family=Lobster&display=swap" rel="stylesheet">
+    <!-- CSS -->
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <header>
-        <h1>Vioedu</h1>
-        <nav>
-            <ul>
-                <li><a href="#">Vào học</a></li>
-                <li><a href="#">Nhật ký học tập</a></li>
-                <li><a href="#">Thành tích học tập</a></li>
-                <li><a href="#">Đánh giá</a></li>
-                <li><a href="#">Đổi quà</a></li>
-                <li><a href="#">Đấu trường</a></li>
-                <li><a href="#">Thách đấu</a></li>
-                <li><a href="#">Giới thiệu</a></li>
-            </ul>
-        </nav>
-    </header>
-
-    <section class="courses">
-        <h2>Các Khóa Học Nổi Bật</h2>
-        <div class="course-list">
-            <div class="course-item">
-                <h3>Khóa Học Văn Lớp 6</h3>
-                <a href="#">Xem Chi Tiết</a>
+    <!-- Chân trang -->
+    <footer>
+        <div class="footer-container">
+            <div class="footer-left">
+                <h2>Thông tin liên hệ</h2>
+                <p><strong>Địa chỉ:</strong></p>
+                <p>Trường THCS Bình Sơn tại tỉnh Đồng Nai huyện Long Thành xã Bình Sơn</p>
+                <p><strong>Điện thoại:</strong> xxx-xxx-xxxx</p>
+                <p><strong>Email:</strong> huynhkhang3k@gmail.com</p>
+                <p><strong>Facebook:</strong> <a href="https://www.facebook.com/profile.php?id=100076752411395" target="_blank">Liên đội THCS Bình Sơn</a></p>
+                <p><strong>Youtube:</strong> <a href="https://www.youtube.com/@thcsbinhson5022" target="_blank">THCS Bình Sơn</a></p>
             </div>
-            <div class="course-item">
-                <h3>Khóa Học Văn Lớp 7</h3>
-                <a href="#">Xem Chi Tiết</a>
-            </div>
-            <div class="course-item">
-                <h3>Khóa Học Văn Lớp 8</h3>
-                <a href="#">Xem Chi Tiết</a>
-            </div>
-            <div class="course-item">
-                <h3>Khóa Học Văn Lớp 9</h3>
-                <a href="#">Xem Chi Tiết</a>
+            <div class="footer-right">
+                <p><strong>Bản quyền:</strong></p>
+                <p>© 2025 THCS Bình Sơn Website</p>
+                <p>Được làm bởi Huỳnh Khang</p>
+                <p><strong>Website:</strong> <a href="http://thcsbinhson.edu.vn/" target="_blank">Website VN Edu</a></p>
             </div>
         </div>
-    </section>
-
-    <footer>
-        <p>&copy; 2025 Vioedu. Chúc mừng năm mới!</p>
     </footer>
-
-    <script src="scripts.js"></script>
 </body>
 </html>
+
